# agent-ads

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  agent-ads.config.json.example  package-lock.json  package.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/agent_ads_cli/: Cargo.toml
crates/agent_ads_cli/src/: google.rs  linkedin.rs  main.rs  meta.rs  pinterest.rs  tiktok.rs  x.rs
crates/agent_ads_core/: Cargo.toml
crates/agent_ads_core/src/: auth.rs  auth_bundle.rs  client.rs  config.rs  endpoints.rs  google_auth.rs  google_client.rs  google_config.rs  google_error.rs  lib.rs  linkedin_client.rs  linkedin_config.rs  linkedin_endpoints.rs  linkedin_error.rs  output.rs  pinterest_auth.rs  pinterest_client.rs  pinterest_config.rs  pinterest_endpoints.rs  pinterest_error.rs  secret_store.rs  tiktok_auth.rs  tiktok_client.rs  tiktok_config.rs  tiktok_endpoints.rs  tiktok_error.rs  x_client.rs  x_config.rs  x_endpoints.rs  x_error.rs
crates/meta_ads_cli/: Cargo.toml
crates/meta_ads_cli/src/: main.rs
crates/meta_ads_core/: Cargo.toml
crates/meta_ads_core/src/: auth.rs  endpoints.rs  error.rs  ids.rs  lib.rs  output.rs
docs/: command-topics.md
npm/: tsconfig.json
npm/agent-ads/: README.md  index.d.ts  index.js  index.ts  package.json
npm/agent-ads/scripts/: configure-trusted-publishing.js  configure-trusted-publishing.ts  generate-command-topics.js  generate-command-topics.ts  prepare-release.js  prepare-release.ts  publish-release.js  publish-release.ts
npm/platform/darwin-arm64/: index.ts  package.json
npm/platform/darwin-x64/: index.js  package.json
npm/platform/linux-arm64-gnu/: package.json
npm/platform/linux-x64-gnu/: package.json
npm/platform/win32-x64-msvc/: package.json
npm/platform/windows-x64-msvc/: index.js  index.ts  package.json
skills/agent-ads/: SKILL.md
skills/agent-ads/agents/: openai.yaml
skills/agent-ads/references/: google-workflows.md  google.md  linkedin.md  meta-accounts-and-objects.md  meta-auth-and-output.md  meta-creative-and-changes.md  meta-reports.md  meta-tracking.md  meta-workflows.md  meta.md  pinterest.md  tiktok-accounts-and-objects.md  tiktok-auth.md  tiktok-creative-and-tracking.md  tiktok-reports.md  tiktok-workflows.md  tiktok.md  x-analytics.md  x-audiences-and-measurement.md  x-auth-and-config.md  x-campaign-management.md  x-creatives.md  x.md
website/: package-lock.json  package.json  react-router.config.ts
website/app/: app.css  root.tsx  routes.ts
website/app/components/: code-block.tsx  docs.tsx  engine-pages.tsx  toc-context.tsx  tokenize-shell.ts
website/app/content/: site.ts
website/app/routes/: auth.tsx  config.tsx  engines.google.tsx  engines.linkedin.tsx  engines.meta.tsx  engines.pinterest.tsx  engines.tiktok.tsx  engines.x.tsx  home.tsx  not-found.tsx  reference.google.tsx  reference.meta.tsx  reference.pinterest.tsx  reference.tiktok.tsx  reference.tsx  skills.tsx
website/scripts/: generate-content.mjs
