[workspace]
members = ["crates/meta_ads_core", "crates/meta_ads_cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["bengoism"]
repository = "https://github.com/bengoism/agent-ads"
rust-version = "1.82"

[workspace.dependencies]
clap = { version = "4.5.39", features = ["derive", "env"] }
csv = "1.3.1"
dotenvy = "0.15.7"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = "2.5.4"

[workspace.dependencies.tempfile]
version = "3.19.1"

[workspace.dependencies.wiremock]
version = "0.6.3"
