[workspace]
members = ["crates/agent_ads_core", "crates/agent_ads_cli"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["bengoism"]
repository = "https://github.com/bengoism/agent-ads"
rust-version = "1.82"

[workspace.dependencies]
clap = { version = "4.5.39", features = ["derive", "env"] }
csv = "1.3.1"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service", "vendored"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = "2.5.4"

[workspace.dependencies.tempfile]
version = "3.19.1"

[workspace.dependencies.wiremock]
version = "0.6.3"
