[package]
name = "agent_ads_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "agent-ads"
path = "src/main.rs"

[dependencies]
clap.workspace = true
agent_ads_core = { path = "../agent_ads_core" }
dialoguer.workspace = true
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
wiremock.workspace = true
