[package]
name = "agent_ads_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
csv.workspace = true
flate2.workspace = true
httpdate.workspace = true
keyring.workspace = true
reqwest.workspace = true
reqwest-oauth1.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
wiremock.workspace = true
